# practical-ai-engineering-finance

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: pages.yml  tests.yml
data/sample/: prices.csv
docs/: index.md  syllabus.md
docs/projects/: capstone.md  rubric.md
docs/resources/: interview-prep.md  readings.md
docs/setup/: git-github.md  mac-vscode.md
docs/weeks/: week-01.md  week-01_Practical_AI_Engineering_for_Finance.md  week-02.md  week-02_Practical_AI_Engineering_for_Finance.md  week-03.md  week-03_Practical_AI_Engineering_for_Finance.md  week-04.md  week-04_Practical_AI_Engineering_for_Finance.md  week-05.md  week-05_Practical_AI_Engineering_for_Finance.md  week-06.md  week-07.md  week-08.md  week-09.md  week-10.md  week-11.md  week-12.md  week-13.md  week-14.md  week-15.md  week-16.md  week-17.md  week-17_Practical_AI_Engineering_for_Finance.md  week-18.md  week-18_Practical_AI_Engineering_for_Finance.md
examples/week-02/: library_basics.ipynb  library_basics.py
examples/week-03/: performance_summary.ipynb  performance_summary.py
examples/week-04/: fetch_company_filings.ipynb  fetch_company_filings.py
examples/week-05/: reliable_fetch.ipynb  reliable_fetch.py
examples/week-17/: evaluate_company.ipynb  evaluate_company.py
notebooks/: week01_intro_notebook.ipynb
src/ai_finance_course/: __init__.py  (+3 more)
tests/: test_analysis.py  test_dcf_model.py  test_edgar.py  test_edgar_client.py  test_financial_model.py  test_returns.py  test_value_investor.py
(+22 files in other folders)
