[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-finance-course"
version = "0.1.0"
description = "Starter code for Practical AI Engineering for Finance"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.2",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "statsmodels>=0.14",
    "polars>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]
rag = [
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
